# kdeconnect-mcp-server

./: .gitignore  README.md  SETUP.md  mcp_server.py  pyproject.toml  requirements.txt  test_mcp.py
